--- a/publications/index.html
+++ b/publications/index.html
@@ -91,7 +91,7 @@
     <div class="container">
       
       <a class="navbar-brand title font-weight-lighter" href="/">
-       <span class="font-weight-bold">Yejin</span>   Lee
+       <span class="font-weight-bold">Donghyun</span>   Lee
       </a>
       
       <!-- Navbar Toggle -->
