--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ put your address / p.o. box / other info right below your picture. you can also 
 
 link to your social media connections, too. this theme is set up to use [font awesome icons](http://fortawesome.github.io/font-awesome/){:target="\_blank"} and [academicons](https://jpswalsh.github.io/academicons/){:target="\_blank"}, like the ones below. add your facebook, twitter, linkedin, google scholar, or just disable all of them.
  -->
-<p>Hello! I am a Ph.D candidate in the Department of Computer Science and Engineering at Seoul National University. I am a member of <a href="https://arc.snu.ac.kr/" target="\_blank">Architecture and Code Optimization (ARC) Lab</a> led by <a href="https://iamjaelee.github.io/www/" target="\_blank">Professor Jae W. Lee</a>.</p>
+<p>Hello! I am a 4th year Ph.D student in the Department of Computer Science and Engineering at Seoul National University. I am a member of <a href="https://arc.snu.ac.kr/" target="\_blank">Architecture and Code Optimization (ARC) Lab</a> led by <a href="https://iamjaelee.github.io/www/" target="\_blank">Professor Jae W. Lee</a>.</p>
 
 <p>My research focuses on systems for machine learning, with current interests in efficient 3D vision and GPU kernel optimization.</p>
 
